--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://images.unsplash.com/photo-1692969959077-7b16772805c8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8&auto=format&fit=crop&w=600&q=60" alt="">\
+    <h1>Doki koteswar</h1>
+    <a href="www.google.com">Linkedin</a>
+    <section class="skills">html</section>
+    <section class="projects">
+      <ul>
+        <li>html</li>
+        <li>css</li>
+      </ul>
+    </section>
     <script type="text/javascript" src="./script.js">
 </script>
 
